[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[project]
name = "wemportal"
version = "0.0.4"
authors = [
  { name="floek", email="root@floek.net" },
]
dependencies = [
    'requests>=2.28.2',
    'beautifulsoup4>=4.11.2',
    'python-dateutil>=2.8.2'
]

description = "Python module for fetching wemportal data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/floek/wemportal"
"Bug Tracker" = "https://github.com/floek/wemportal/issues/"
